# chorus

./: .env.example  .gitignore  Dockerfile  Dockerfile.prod  MVP_QUICKSTART.md  README.md  docker-compose.yml  notebook_lm_research.md  pyproject.toml
.github/workflows/: ci-cd.yaml
docs/: API.md  ARCHITECTURE.md  DEPLOYMENT.md  EVALUATION.md  GRAPHRAG.md  SETUP.md  UI_PLAN.md
examples/: simple_chat.py  test_api.py
infrastructure/kubernetes/: autoscaling.yaml  data-services.yaml  deployment.yaml  ingress.yaml  monitoring.yaml  secrets.yaml
infrastructure/terraform/: eks.tf  main.tf  outputs.tf  variables.tf
scripts/: __init__.py  deploy.sh  ingest_documents.py
src/: __init__.py  config.py
src/agents/: __init__.py  agent_state.py  base_agent.py  graph_query_agent.py  query_analyzer.py  query_rewriter.py  retrieval_agent.py  router_agent.py  supervisor.py  supervisor_orchestrator.py  synthesis_agent.py  validation_agent.py  web_search_agent.py
src/api/: __init__.py  main.py
src/api/routers/: __init__.py  chat_rest.py  chat_websocket.py  docs.py  health.py
src/evaluation/: __init__.py  rag_evaluator.py
src/graph/: __init__.py  cypher_generator.py  entity_extractor.py  neo4j_client.py
src/llm/: __init__.py  bedrock_client.py
src/memory/: __init__.py  conversation_memory.py
src/retrieval/: __init__.py  bge_reranker.py  hybrid_search.py  reranker.py  semantic_chunker.py  vector_store.py
src/services/: __init__.py  orchestrator.py
src/tracing/: __init__.py  langsmith_tracing.py
ui/: README.md  package.json  tailwind.config.js
ui/app/: globals.css  layout.tsx  page.tsx
ui/app/agents/: page.tsx
ui/app/analytics/: page.tsx
ui/app/chat/: page.tsx
ui/app/documents/: page.tsx
ui/hooks/: useChat.ts
ui/utils/: helpers.ts
